# WoWee

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EXPANSION_GUIDE.md  GETTING_STARTED.md  PKGBUILD  README.md  TESTING.md  TROUBLESHOOTING.md  build.ps1  build.sh  clean.sh  rebuild.ps1  rebuild.sh  restart-worldserver.sh  test.sh  vcpkg.json
.github/workflows/: build.yml  release.yml
assets/shaders/: character.frag.glsl  character.frag.spv  fxaa.frag.glsl  m2.vert.glsl  m2.vert.spv  m2_cull.comp.glsl  m2_cull.comp.spv  m2_particle.frag.glsl  m2_ribbon.frag.glsl  m2_ribbon.frag.spv  m2_ribbon.vert.glsl  m2_ribbon.vert.spv  minimap_display.frag.glsl  terrain.frag.glsl  water.frag.glsl  water.frag.spv  wmo.frag.glsl  world_map_fog.frag.glsl
assets/textures/: README.md
container/: FLOW.md  README.md  build-linux.sh  build-macos.sh  build-windows.sh  builder-linux.Dockerfile  builder-macos.Dockerfile  builder-windows.Dockerfile  run-linux.ps1  run-linux.sh  run-macos.ps1  run-macos.sh  run-windows.ps1  run-windows.sh
container/macos/: osxcross-toolchain.cmake  sdk-fetcher.py
docs/: AMD_FSR2_INTEGRATION.md  ANIMATION_SYSTEM.md  WARDEN_IMPLEMENTATION.md  WARDEN_QUICK_REFERENCE.md  architecture.md  authentication.md  packet-framing.md  perf_baseline.md  quickstart.md  server-setup.md  srp-implementation.md  status.md  threading.md
include/addons/: addon_manager.hpp  lua_api_helpers.hpp  lua_api_registrations.hpp  lua_engine.hpp  lua_services.hpp  toc_parser.hpp
include/audio/: ambient_sound_manager.hpp  audio_coordinator.hpp  audio_engine.hpp  ui_sound_manager.hpp
include/auth/: auth_handler.hpp  auth_packets.hpp  pin_auth.hpp  srp.hpp
include/core/: animation_callback_handler.hpp  appearance_composer.hpp  application.hpp  audio_callback_handler.hpp  entity_spawn_callback_handler.hpp  logger.hpp  memory_monitor.hpp  npc_interaction_callback_handler.hpp  profiler.hpp  transport_callback_handler.hpp  ui_screen_callback_handler.hpp  world_entry_callback_handler.hpp  world_loader.hpp
include/game/: chat_handler.hpp  combat_handler.hpp  entity.hpp  entity_controller.hpp  game_handler.hpp  game_services.hpp  game_utils.hpp  handler_types.hpp  inventory.hpp  inventory_handler.hpp  movement_handler.hpp  packet_parsers.hpp  protocol_constants.hpp  quest_handler.hpp  social_handler.hpp  spell_defines.hpp  spell_handler.hpp  spline_packet.hpp  transport_animator.hpp  transport_clock_sync.hpp  transport_manager.hpp  transport_path_repository.hpp  update_field_table.hpp  warden_constants.hpp  warden_emulator.hpp  warden_handler.hpp  warden_module.hpp  world_packets.hpp
include/math/: spline.hpp
include/network/: net_platform.hpp  packet.hpp  world_socket.hpp
include/pipeline/: asset_manager.hpp  asset_manifest.hpp  dbc_loader.hpp  m2_loader.hpp  mpq_manager.hpp
include/rendering/: amd_fsr3_runtime.hpp  amd_fsr3_wrapper_abi.h  animation_controller.hpp  animation_ids.hpp  camera.hpp  camera_controller.hpp  character_preview.hpp  character_renderer.hpp  charge_effect.hpp  frustum.hpp  lightning.hpp  m2_model_classifier.hpp  m2_renderer.hpp  minimap.hpp  mount_dust.hpp  quest_marker_renderer.hpp  render_constants.hpp  render_graph.hpp  renderer.hpp  shader.hpp  spell_visual_system.hpp  swim_effects.hpp  terrain_manager.hpp  terrain_renderer.hpp  vk_context.hpp  vk_frame_data.hpp  vk_pipeline.hpp  vk_render_target.hpp  vk_shader.hpp  vk_texture.hpp  water_renderer.hpp  weather.hpp  wmo_renderer.hpp  world_map.hpp
include/ui/: action_bar_panel.hpp  auth_screen.hpp  character_screen.hpp  chat_panel.hpp  combat_ui.hpp  dialog_manager.hpp  game_screen.hpp  inventory_screen.hpp  keybinding_manager.hpp  quest_log_screen.hpp  realm_screen.hpp  settings_panel.hpp  social_panel.hpp  spellbook_screen.hpp  talent_screen.hpp  toast_manager.hpp  ui_colors.hpp  ui_constants.hpp  ui_helpers.hpp  ui_manager.hpp  ui_services.hpp  window_manager.hpp
resources/: wowee.rc
src/: main.cpp
src/addons/: addon_manager.cpp  lua_action_api.cpp  lua_engine.cpp  lua_inventory_api.cpp  lua_quest_api.cpp  lua_social_api.cpp  lua_spell_api.cpp  lua_system_api.cpp  lua_unit_api.cpp  toc_parser.cpp
src/audio/: activity_sound_manager.cpp  ambient_sound_manager.cpp  audio_coordinator.cpp  audio_engine.cpp  spell_sound_manager.cpp  ui_sound_manager.cpp
src/auth/: auth_handler.cpp  auth_packets.cpp  big_num.cpp  pin_auth.cpp  srp.cpp
src/core/: animation_callback_handler.cpp  appearance_composer.cpp  application.cpp  audio_callback_handler.cpp  entity_spawn_callback_handler.cpp  entity_spawner.cpp  entity_spawner_player.cpp  entity_spawner_processing.cpp  input.cpp  logger.cpp  memory_monitor.cpp  npc_interaction_callback_handler.cpp  transport_callback_handler.cpp  ui_screen_callback_handler.cpp  window.cpp  world_entry_callback_handler.cpp  world_loader.cpp
src/game/: chat_handler.cpp  combat_handler.cpp  entity_controller.cpp  expansion_profile.cpp  game_handler.cpp  game_handler_callbacks.cpp  game_handler_packets.cpp  inventory.cpp  inventory_handler.cpp  movement_handler.cpp  packet_parsers_classic.cpp  packet_parsers_tbc.cpp  quest_handler.cpp  social_handler.cpp  spell_handler.cpp  spline_packet.cpp  transport_animator.cpp  transport_clock_sync.cpp  warden_emulator.cpp  (+11 more)
tests/: CMakeLists.txt  test_activity_fsm.cpp  test_anim_capability.cpp  test_animation_ids.cpp  test_blp_loader.cpp  test_combat_fsm.cpp  test_dbc_loader.cpp  test_entity.cpp  test_frustum.cpp  test_locomotion_fsm.cpp  test_m2_structs.cpp  test_opcode_table.cpp  test_packet.cpp  test_spline.cpp  test_srp.cpp  test_transport_components.cpp  test_transport_path_repo.cpp  test_world_map.cpp  test_world_map_coordinate_projection.cpp  test_world_map_exploration_state.cpp  test_world_map_map_resolver.cpp  test_world_map_view_state_machine.cpp  test_world_map_zone_metadata.cpp
tools/: asset_pipeline_gui.py  diff_classic_turtle_opcodes.py  gen_opcode_registry.py  generate_ffx_sdk_vk_permutations.sh  m2_viewer.py  opcode_map_utils.py  validate_opcode_maps.py
(+161 files in other folders)
